<resources>
    <string name="app_name">In Class 2a</string>
    <string name="textBMI">Body Mass Index (BMI)</string>
    <string name="editTextWeightLabel">Weight</string>
    <string name="editTextWeight" />
    <string name="textLabelWeightUnit">lb</string>
    <string name="textHeightLabel">Height</string>
    <string name="textLabelFeet">feet</string>
    <string name="textLabeInches">inches</string>
    <string name="buttonBmiCalc">Calculate BMI</string>
    <string name="textBMIVal" />
</resources>
